@@ -1,12 +1,15 @@
 package template
 
+import "github.com/elastic/beats/libbeat/common"
+
 type TemplateConfig struct {
-	Enabled   bool             `config:"enabled"`
-	Name      string           `config:"name"`
-	Pattern   string           `config:"pattern"`
-	Fields    string           `config:"fields"`
-	Overwrite bool             `config:"overwrite"`
-	Settings  TemplateSettings `config:"settings"`
+	Enabled      bool             `config:"enabled"`
+	Name         string           `config:"name"`
+	Pattern      string           `config:"pattern"`
+	Fields       string           `config:"fields"`
+	AppendFields common.Fields    `config:"append_fields"`
+	Overwrite    bool             `config:"overwrite"`
+	Settings     TemplateSettings `config:"settings"`
 }
 
 type TemplateSettings struct {
